--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title> Hello Echo Mao!</title>
 </head>
 <body>
-<h1> Hello Coursera!
+<h1> Hello Coursera! My name is Echo Mao!
 </body>
 </html>
